Eliminated warnings.